# ycore

./: .gitignore  Makefile  README.md
kernel/: Cargo.toml  Makefile  build.rs
kernel/src/: batch.rs  console.rs  cpu.rs  entry.asm  loader.rs  main.rs  sbi.rs
kernel/src/syscall/: process.rs
kernel/src/trap/: mod.rs
user/: Cargo.toml  Makefile
user/src/: lib.rs  linker.ld
