[package]
name = "kernel"
version = "0.1.0"
authors = ["刘丰源 <liufy17@mails.tsinghua.edu.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.5"
log = "0.4"
xmas-elf = "0.7"
